Fix css alignment solve with grid

--- a/assignments/fullstack/frontend/src/App.css
+++ b/assignments/fullstack/frontend/src/App.css
@@ -16,7 +16,10 @@
   background-color: rgb(37, 206, 209);
   color: rgb(255, 255, 255);
   text-align: center;
-  padding: 0.8rem;
+  width: 100%;
+  height: 100%;
+  padding: 3rem;
+  margin: 0;
 }
 
 .h2 {
