--- a/assignments/fullstack/frontend/src/index.css
+++ b/assignments/fullstack/frontend/src/index.css
@@ -1,18 +1,22 @@
-body {
+html,
+body,
+#root {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Work Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 14px;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  overflow: hidden;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.h2 {
+h2 {
   width: 100%;
   text-align: center;
   display: block;
@@ -22,4 +26,28 @@ code {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   font-weight: bold;
+}
+
+.chatBotList {
+  overflow: hidden auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding-top: 1em;
+  font-size: 12px;
+  margin-bottom: 5rem;
+}
+
+.chatInputContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  position: relative;
+  width: 100%;
+  height: 76px;
+  border: 0px;
+  box-sizing: border-box;
+  font-size: 12px;
+  flex-shrink: 0;
 }
